--- a/src/styles/cards/card-form.css
+++ b/src/styles/cards/card-form.css
@@ -34,8 +34,8 @@ input[type=checkbox] {
     left: 0;
     height: 20px;
     width: 20px;
-    background-color: black;
-    border: 2px solid white;
+    background-color: darkgray;
+    border: 1px solid white;
     border-radius: 50%;
 }
 
@@ -89,18 +89,6 @@ input[type=checkbox] {
     bottom: 5px;
      width: 4px;
      height: 10px;
-     border: solid white;
-     border-width: 0 4px 4px 0;
-     -webkit-transform: rotate(45deg);
-     -ms-transform: rotate(45deg);
-     transform: rotate(45deg);
-}
-
-.checkbox #black-check:after {
-    left: 8px;
-    bottom: 5px;
-     width: 2px;
-     height: 8px;
      border: solid white;
      border-width: 0 4px 4px 0;
      -webkit-transform: rotate(45deg);
