--- a/src/styles/cards/card-form.css
+++ b/src/styles/cards/card-form.css
@@ -8,8 +8,7 @@
 
 .checkbox {
     position: relative;
-    padding-left: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
     cursor: pointer;
     width: 25px;
     height: 25px;
@@ -28,40 +27,16 @@ input[type=checkbox] {
     background-color: darkRed
 }
 
-#black-check {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    background-color: darkgray;
-    border: 1px solid white;
-    border-radius: 50%;
-}
-
 .checkbox:hover input ~ #restricted-check {
    background-color: red; 
-}
-
-.checkbox:hover input ~ #black-check {
-   background-color: grey; 
 }
 
 .checkbox:hover input:active ~ #restricted-check {
     background-color: lightcoral;
 }
 
-.checkbox:hover input:active ~ #black-check {
-    background-color: darkslategray;
-}
-
 .checkbox input:checked ~ #restricted-check {
     background-color: red;
-}
-
-.checkbox input:checked ~ #black-check {
-    background-color: black;
-    border-radius: 50%;
 }
 
 #restricted-check:after {
@@ -70,17 +45,7 @@ input[type=checkbox] {
     display: none;
 }
 
-#black-check:after {
-    content: '';
-    position: absolute;
-    display: none;
-}
-
 .checkbox input:checked ~ #restricted-check:after {
-    display: block;
-}
-
-.checkbox input:checked ~ #black-check:after {
     display: block;
 }
 
@@ -94,4 +59,142 @@ input[type=checkbox] {
      -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
      transform: rotate(45deg);
+}
+
+.color-checkboxes {
+    margin: 5px;
+}
+
+#black-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: darkgray;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #black-check {
+   background-color: slategray; 
+}
+
+.checkbox input:checked ~ #black-check {
+    background-color: black;
+}
+
+#green-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: lightgreen;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #green-check {
+   background-color: seagreen; 
+}
+
+.checkbox input:checked ~ #green-check {
+    background-color: green;
+    border-radius: 50%;
+}
+
+#red-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: salmon;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #red-check {
+   background-color: crimson; 
+}
+
+.checkbox input:checked ~ #red-check {
+    background-color: red;
+}
+
+#blue-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: lightskyblue;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #blue-check {
+   background-color: cornflowerblue; 
+}
+
+.checkbox input:checked ~ #blue-check {
+    background-color: blue;
+}
+
+#white-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: azure;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #white-check {
+   background-color: lightgrey; 
+}
+
+.checkbox input:checked ~ #white-check {
+    background-color: whitesmoke;
+}
+
+#multicolored-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: lemonchiffon;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #multicolored-check {
+   background-color: goldenrod; 
+}
+
+.checkbox input:checked ~ #multicolored-check {
+    background-color: gold;
+}
+
+#colorless-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: lightgray;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.checkbox:hover input ~ #colorless-check {
+   background-color: gainsboro; 
+}
+
+.checkbox input:checked ~ #colorless-check {
+    background-color: darkgray;
 }
